<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MilkBox</string>
    <string name="action_settings">Settings</string>
    <string name="price">金額</string>
    <string name="qty">數量</string>
    <string name="subtotal">小計</string>
    <string name="sub">小計</string>
    <string name="name">品名</string>
    <string name="cancel">取消</string>
    <string name="checkout">結帳</string>
    <string name="checkoutcart">購物車</string>
    <string name="history">訂單查詢</string>
    <string name="search">搜尋</string>
    <string name="search_cancel">取消搜尋</string>
    <string name="search_dialog">關鍵字：</string>
    <string name="wishlist">我的最愛</string>
    <string name="no_data">目前沒有商品</string>
    <string name="not_found">很抱歉,沒有符合的商品,\n請換一個關鍵字</string>
    <string name="go">搜尋</string>
    <string name="delete">刪除</string>
    <string name="change">修改</string>
    <string name="success">成功</string>
    <string name="fail">失敗</string>
    <string name="ok">確認</string>
    <string name="add">加入</string>
    <string name="add_to_cart">已放入購物車</string>
    <string name="add_all_to_cart">已全部放入購物車</string>
    <string name="shopping_cart">購物車</string>
    <string name="dialog_quantity">數量 :</string>
    <string name="grocery">生鮮購物</string>
    <string name="grocery_add_to_wishlist">加入我的最愛</string>
    <string name="grocery_add_to_cart">放入購物車</string>
    <string name="order_history_history">訂單查詢</string>
    <string name="order_history_order_num">訂單號碼</string>
    <string name="order_history_date">訂購日期</string>
    <string name="order_history_ship_to">收件者姓名</string>
    <string name="order_history_order_total">總金額</string>
    <string name="order_history_order_status">訂單進度</string>
    <string name="order_history_shipping_handling">運費/手續費</string>
    <string name="order_history_grand_total">總金額</string>
    <string name="order_info">訂單詳細資訊</string>
    <string name="order_info_shipping">配送</string>
    <string name="order_info_payment">付款</string>
    <string name="order_info_overview">明細</string>
    <string name="order_info_shipping_addres">收件地址</string>
    <string name="order_info_shipping_method">配送方式</string>
    <string name="order_info_billing_addres">持卡人帳單地址</string>
    <string name="order_info_payment_method">付款方式</string>
    <string name="order_info_cc_type">Type</string>
    <string name="order_info_cc_num">Number</string>
    <string name="order_info_cc_name">Owner Name</string>
    <string name="coupon">Coupon</string>
    <string name="coupon_my">My Coupon</string>
    <string name="coupon_description">Description</string>
    <string name="coupon_exp_date">Expiry Date</string>
    <string name="coupon_use">Use</string>
    <string name="coupon_collect">Collect</string>
    <string name="coupon_add_to_cart">Add to Cart</string>
    <string name="coupon_remove_coupon">Remove Coupon</string>
    <string name="coupon_no_inventory">No any inventory available</string>
    <string name="coupon_cannt_remove_coupon">Can not remove this coupon</string>
    <string name="coupon_already_in_my_coupon">Already in my coupon</string>
    <string name="coupon_remove">Remove</string>
    <string name="wishlist_image">圖片</string>
    <string name="wishlist_product">品名/金額</string>
    <string name="wishlist_description">商品敘述</string>
    <string name="wishlist_add_all_to_cart">全部放入購物車</string>
    <string name="wishlist_remove_success">Remove Success</string>
    <string name="homedine_title">Takeout Delivery</string>
    <string name="homedine_checkout">Check out</string>
    <string name="homedine_checkout_loading">Check out loading</string>
    <string name="homedine_removelatest">Remove Latest</string>
    <string name="homedine_latestorder">Latest Order</string>
    <string name="homedine_under200calores">Under 200 Calories</string>
    <string name="homedine_progress">Progress</string>
    <string name="homedine_allcalores">All Calories</string>
    <string name="homedine_loading_shop">Shop is loading...</string>
    <string name="homedine_loading_food">Food is loading...</string>
    <string name="homedine_loading_food_more">Loading more food...</string>
    <string name="homedine_loading_progress">Loading in progress...</string>
    <string name="homedine_setMeals">Set Meals</string>
    <string name="homedine_Calorie">Calorie</string>
    <string name="homedine_mins">Mins</string>
    <string name="homedine_Carbohydrates">Carbohydrates</string>
    <string name="homedine_Cholesterol">Cholesterol</string>
    <string name="homedine_Fat">Fat</string>
    <string name="homedine_Protein">Protein</string>
    <string name="homedine_Saturated_Fat">Saturated_Fat</string>
    <string name="homedine_Sodlum">Sodlum</string>
    <string name="homedine_Sugar">Sugar</string>
    <string name="homedine_Trand_Fat">Trand_Fat</string>
    <string name="homedine_eqoall_v">||</string>
    <string name="homedine_meals_about"><![CDATA[請按&apos;左鍵&apos;或&apos;右鍵&apos;選擇商品數量]]></string>
    <string name="homedine_meals_remaining_quantity">Remaining Quantity : </string>
    <string name="homedine_meals_quantity">數量 : </string>
    <string name="homedine_meals_addtomeals">Add to Meal List</string>
    <string name="homedine_meals_mealslist">Meal List</string>
    <string name="homedine_meals_totalCalories">Total Calories</string>
    <string name="homedine_meals_subtotal">小計</string>
    <string name="homedine_meals_tax">Tax</string>
    <string name="homedine_meals_deliverfee">Deliver Fee</string>
    <string name="homedine_meals_usd">USD</string>
    <string name="homedine_meals_total">Total</string>
    <string name="homedine_meals_list_items">Items</string>
    <string name="homedine_meals_list_quantity">Quantity</string>
    <string name="homedine_meals_list_calories">Calories</string>
    <string name="homedine_meals_list_price">Price</string>
    <string name="homedine_meals_list_empty">Meal List is empty</string>
    <string name="homedine_meals_delete_ok">is remove</string>
    <string name="homedine_progress_about"><![CDATA[Please Use the <font size=7><b>LEFT</b></font> and <font size=7><b>RIGHT</b></font> button select progress.]]></string>
    <string name="homedine_progress_no_order">You have\'nt ordered here.</string>
    <string name="homedine_Cancel">取消</string>
    <string name="homedine_confirm_delete">Confirm Delete</string>
    <string name="homedine_confirm_delete_shure">Are you shure to remove it from shopping list?</string>
    <string name="homedine_delete">刪除</string>
    <string name="homedine_keep">Keep it</string>
    <string name="homedine_awesome_food_is_on_the_way">Food is on the way!</string>
    <string name="homedine_awesome_your_order_will_be_deliver">Your order will be deliver to your home soon.</string>
    <string name="homedine_awesome">Awesome!</string>
    <string name="homedine_no_select_store">Store not selected.</string>
    <string name="checkout_billing_address">1.帳單地址</string>
    <string name="checkout_shipping_address">2.收件地址</string>
    <string name="checkout_shipping_method">3.配送方式</string>
    <string name="checkout_payment_method">4.付款方式</string>
    <string name="checkout_coupon">5.折價券</string>
    <string name="checkout_order_overview">6.訂單預覽</string>
    <string name="checkout_select_current_setting">目前設定</string>
    <string name="checkout_select_not_choosed_yet">尚未選擇</string>
    <string name="checkout_select_billing_address">請選擇帳單寄送地址</string>
    <string name="checkout_select_shipping_address">請選擇收件地址</string>
    <string name="checkout_select_shipping_method">請選擇配送方式</string>
    <string name="checkout_select_payment_method">請選擇付款方式</string>
    <string name="checkout_select_coupon">請選擇折價券</string>
    <string name="checkout_select_credit_card">請選擇一張信用卡</string>
    <string name="checkout_add_address">New address</string>
    <string name="checkout_select_address">Select address</string>
    <string name="checkout_order">送出訂單</string>
    <string name="checkout_next">下一步</string>
    <string name="checkout_back">上一步</string>
    <string name="checkout_credit_card_type">信用卡別</string>
    <string name="checkout_credit_card_number">信用卡卡號</string>
    <string name="checkout_credit_card_expiry">到期日 ( MM / YY )</string>
    <string name="checkout_credit_card_cid">信用卡CID</string>
    <string name="checkout_deliver_fee">Deliver Fee</string>
    <string name="checkout_sub">Sub.</string>
    <string name="checkout_total">Total</string>
    <string name="checkout_thanks_for_shopping">感謝您的購物</string>
    <string name="checkout_thanks_for_shopping_msg1">將儘快為您安排出貨</string>
    <string name="checkout_cc">信用卡</string>
    <string name="checkout_cc_do_you_add">Add a new credit card?</string>
    <string name="checkout_cc_do_you_delete">Delete credit card?</string>
    <string name="checkout_cc_del">刪除</string>
    <string name="checkout_cc_name_requirement">please input credit card name</string>
    <string name="checkout_cc_number_requirement">please input credit card number</string>
    <string name="checkout_cc_type_requirement">please input credit card type</string>
    <string name="checkout_cc_mm_requirement">please input credit card expiry month</string>
    <string name="checkout_cc_yy_requirement">please input credit card expiry year</string>
    <string name="checkout_cc_cid_requirement">please input credit card CID</string>
    <string name="checkout_cannot_use_this_coupon">Cannot use this coupon</string>
    <string name="checkout_addaddress_new_address">Add new address</string>
    <string name="checkout_addaddress_firstname">First Name</string>
    <string name="checkout_addaddress_lastname">Last Name</string>
    <string name="checkout_addaddress_street1">Street line 1</string>
    <string name="checkout_addaddress_street2">Street line 2</string>
    <string name="checkout_addaddress_city">City</string>
    <string name="checkout_addaddress_country_id">Country</string>
    <string name="checkout_addaddress_postcode">Zip/Postal Code</string>
    <string name="checkout_addaddress_telephone">Telephone</string>
    <string name="checkout_credit_name">持卡人姓名</string>
    <string name="msg_no_shopping_cart_id">No shopping cart id</string>
    <string name="msg_add_wishlist_success">已加入我的最愛</string>
    <string name="msg_item_added">已加入</string>
    <string name="msg_add_cart_success">已放入購物車</string>
    <string name="msg_add_my_coupon_success">Add to my coupon success</string>
    <string name="msg_initial_error">Initial error</string>
    <string name="msg_illegal_client">This Milkbox is not authorized!</string>
    <string name="msg_illegal_store">Illegal store</string>
    <string name="msg_data_length_2">搜尋至少要兩個字</string>
    <string name="msg_data_length_3">Length must be at least 3 characters</string>
    <string name="msg_product_is_not_exist">沒有這個商品</string>
    <string name="msg_the_item_was_deleted">商品已刪除</string>
    <string name="msg_host_error">Host error</string>
    <string name="msg_network_error">網路不通</string>
    <string name="error_internet">網路不通</string>
    <string name="error">Error!</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="ago">ago</string>
    <string name="unknown">Unknown</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sun">星期日</string>
    <string name="mon">星期一</string>
    <string name="tue">星期二</string>
    <string name="wed">星期三</string>
    <string name="thu">星期四</string>
    <string name="fri">星期五</string>
    <string name="sat">星期六</string>
    <string name="weather_clouds">多雲</string>
    <string name="weather_thunderstorm">雷雨</string>
    <string name="weather_rain">陣雨</string>
    <string name="weather_snow">下雪</string>
    <string name="weather_mist">多霧</string>
    <string name="weather_sun">晴天</string>
</resources>