<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/titleLiner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/billingAddressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/step_bg_left"
                android:gravity="center"
                android:text="@string/checkout_billing_address"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/shippingAddressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/step_bg_mid_disable"
                android:gravity="center"
                android:text="@string/checkout_shipping_address"
                android:textColor="#8e8e8e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/shippingMethodTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/step_bg_mid_disable"
                android:gravity="center"
                android:text="@string/checkout_shipping_method"
                android:textColor="#8e8e8e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/paymentMethodTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/step_bg_mid_disable"
                android:gravity="center"
                android:text="@string/checkout_payment_method"
                android:textColor="#8e8e8e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/couponTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/step_bg_mid_disable"
                android:gravity="center"
                android:text="@string/checkout_coupon"
                android:textColor="#8e8e8e"
                android:textSize="14sp" />
            
            <TextView
                android:id="@+id/orderOverviewTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/step_bg_right_disable"
                android:gravity="center"
                android:text="@string/checkout_order_overview"
                android:textColor="#8e8e8e"
                android:textSize="14sp" />
        </LinearLayout>

        <ViewFlipper
            android:id="@+id/mainVp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="2" >
        </ViewFlipper>

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dip"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:text="@string/checkout_back"
                android:textColor="#F1BC8E"
                android:textSize="20sp" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:text="@string/checkout_next"
                android:textColor="#F1BC8E"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/groceryCheckoutHit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="說&apos;OK&apos;至下一頁" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>