<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    
    <LinearLayout
        android:id="@+id/mainLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:padding="40dip" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="true"
                android:layout_centerVertical="false"
                android:singleLine="true"
                android:text="@string/order_history_history"
                android:textColor="#ff000000"
                android:textSize="24sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_list_header" >

            <TextView
                android:id="@+id/orderNumTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/order_history_order_num"
                android:textColor="#3e3e3e"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/orderDateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/order_history_date"
                android:textColor="#3e3e3e"
                android:textSize="20sp" />
            
            <TextView
                android:id="@+id/shipToTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/order_history_ship_to"
                android:textColor="#3e3e3e"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/orderTotalTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/order_history_order_total"
                android:textColor="#3e3e3e"
                android:textSize="20sp" />
            
            <TextView
                android:id="@+id/statusTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/order_history_order_status"
                android:textColor="#3e3e3e"
                android:textSize="20sp" />
            
        </LinearLayout>

        <GridView
            style="@style/ListView_Scrollbar"
            android:id="@+id/mainGv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:gravity="center"
            android:listSelector="#00000000"
            android:numColumns="1"
            android:stretchMode="columnWidth" >            
        </GridView>
        
        <!--
        <ListView style="@style/ListView_Scrollbar"
            android:id="@+id/mainLv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:divider="#FFE2E2E2"
            android:listSelector="#ffbee185"
            android:scrollbars="none" >
        </ListView>
        -->

    </LinearLayout>

</LinearLayout>