<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dip" >

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checkout_truck" />

        <TextView
            android:id="@+id/msgTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:shadowColor="#FF000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/checkout_thanks_for_shopping"
            android:textColor="#FF000000"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/msgTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/checkout_thanks_for_shopping_msg1"
            android:textColor="#FF000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/green_btn_bg"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        
    </LinearLayout>

</LinearLayout>